# TooAutomation

./: .codeclimate.yml  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  TooAutomation.h  doxygen.conf
cmake/: ArduinoToolchain.cmake
cmake/Platform/: Arduino.cmake
configuration/: hmacs.c
docs/: doxygen.conf  index.html
docs/html/: ATSHA204_8cpp.html  ATSHA204_8h.html  ATSHA204_8h_source.html  ATSHA204__SW_8cpp.html  ATSHA204__SW_8h.html  ATSHA204__SW_8h_source.html  CMakeCCompilerId_8c.html  CMakeCCompilerId_8d.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8d.html  CONTRIBUTING_8md.html  NODE__SKETCH__TooAutomation__Node_8ino_8cpp.html  NODE__SKETCH__TooAutomation__Node_8ino_8cpp_a0b33edabd7f1c4e4a0bf32c67269be2f_cgraph.map  NODE__SKETCH__TooAutomation__Node_8ino_8cpp_a0b33edabd7f1c4e4a0bf32c67269be2f_cgraph.md5  NODE__SKETCH__TooAutomation__Node_8ino_8cpp_a7dfd9b79bc5a37d7df40207afbc5431f_cgraph.md5  NODE__TooAutomation__Node_8ino_8cpp.html  NODE__TooAutomation__Node_8ino_8cpp_a0b33edabd7f1c4e4a0bf32c67269be2f_cgraph.map  NODE__TooAutomation__Node_8ino_8cpp_a0b33edabd7f1c4e4a0bf32c67269be2f_cgraph.md5  NODE__TooAutomation__Node_8ino_8cpp_a7dfd9b79bc5a37d7df40207afbc5431f_cgraph.map  NODE__TooAutomation__Node_8ino_8cpp_a7dfd9b79bc5a37d7df40207afbc5431f_cgraph.md5  README_8md.html  TooAutomation_8h.html  TooAutomation_8h__incl.map  TooAutomation_8h__incl.md5  TooAutomation_8h_source.html  TooAutomation__TooAutomation__Node_8ino_8cpp.html  TooAutomation__TooAutomation__Node_8ino_8cpp_a0b33edabd7f1c4e4a0bf32c67269be2f_cgraph.map  (+478 more)
(+164 files in other folders)
